docs: align libvips runtime setup guidance
Clarify native libvips prerequisites and Java 25 FFM launch flags so users can diagnose local startup failures without reading build scripts.

Constraint: Issue #82 acceptance requires README setup alignment and git diff --check proof.

Rejected: Code or build changes | documentation-only issue with current Gradle behavior already matching the intended runtime setup.

Confidence: high

Scope-risk: narrow

Directive: Document --enable-native-access as a JVM launch option and place it before -jar in examples.

Tested: git diff --check; rg found no stale java -jar ... --enable-native-access examples in touched README files.

Not-tested: Gradle tests not run because this is documentation-only.